<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".UserProfileActivity"
            android:background="@color/light_gray">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/layout_head"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
<<<<<<< HEAD
                    android:background="@color/purple_700">
=======
                    android:background="@color/primaryTextColor">
>>>>>>> dc56865 (upload recyclerview)

                    <RelativeLayout
                        android:id="@+id/RL_imageView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="40dp"
                            android:elevation="5dp"
<<<<<<< HEAD
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:id="@+id/imageView_profile_dp"
=======
                            app:cardCornerRadius="10dp"
                            android:id="@+id/camera">

                            <ImageView
                                android:id="@+id/gallery"
>>>>>>> dc56865 (upload recyclerview)
                                android:layout_width="160dp"
                                android:layout_height="160dp"
                                android:background="@drawable/no_profile_picture"
                                android:contentDescription="@string/user_display_picture"
                                android:scaleType="centerCrop" />
                        </androidx.cardview.widget.CardView>

                        <ProgressBar
                            android:id="@+id/progress_bar_profile_pic"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="110dp"
                            android:elevation="10dp"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <TextView
<<<<<<< HEAD
                        android:id="@+id/textView_show_welcome"
=======
                        android:id="@id/fullname"
>>>>>>> dc56865 (upload recyclerview)
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/RL_imageView"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="30dp"
                        android:hint="@string/loading"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
<<<<<<< HEAD
                        android:textColor="@android:color/white" />
=======
                        android:textColor="@android:color/white"
                        />
>>>>>>> dc56865 (upload recyclerview)
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:id="@+id/RL_name">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:id="@+id/ic_profile"
                            android:contentDescription="@string/name"
                            android:background="@drawable/ic_profile"/>

                        <TextView
<<<<<<< HEAD
                            android:id="@+id/textView_show_full_name"
=======
                            android:id="@+id/fullname"
>>>>>>> dc56865 (upload recyclerview)
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignStart="@id/ic_profile"
                            android:layout_marginStart="50dp"
                            android:hint="@string/loading" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/divider_name"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/RL_name"
                        android:background="@android:color/darker_gray"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/RL_email"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@id/divider_name">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:id="@+id/ic_email"
                            android:contentDescription="@string/email"
                            android:layout_centerVertical="true"
                            android:background="@drawable/ic_email"/>

                        <TextView
<<<<<<< HEAD
                            android:id="@+id/textView_show_email"
=======
                            android:id="@+id/email"
>>>>>>> dc56865 (upload recyclerview)
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/ic_email"
                            android:layout_marginStart="50dp"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="20dp"
                            android:hint="@string/loading" />
                    </RelativeLayout>

<<<<<<< HEAD
                    <View
                        android:id="@+id/divider_email"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/RL_email"
                        android:background="@android:color/darker_gray"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/RL_dob"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@id/divider_email">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginTop="20dp"
                            android:layout_centerVertical="true"
                            android:id="@+id/ic_dob"
                            android:contentDescription="@string/dob"
                            android:background="@drawable/ic_birthday"/>

                        <TextView
                            android:id="@+id/textView_show_dob"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/ic_dob"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/loading" />
                    </RelativeLayout>
=======

>>>>>>> dc56865 (upload recyclerview)

                    <View
                        android:id="@+id/divider_dob"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
<<<<<<< HEAD
                        android:layout_below="@id/RL_dob"
                        android:background="@android:color/darker_gray"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/RL_gender"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_below="@id/divider_dob">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:id="@+id/ic_gender"
                            android:contentDescription="@string/gender"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/ic_gender"/>

                        <TextView
                            android:id="@+id/textView_show_gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignStart="@id/ic_gender"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/loading" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/divider_gender"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/RL_gender"
                        android:background="@android:color/darker_gray"/>
=======
                        android:layout_below="@id/RL_email"
                        android:background="@android:color/darker_gray"/>


>>>>>>> dc56865 (upload recyclerview)

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/RL_mobile"
                        android:layout_marginTop="10dp"
<<<<<<< HEAD
                        android:layout_below="@id/divider_gender">
=======
                        android:layout_below="@id/divider_dob">
>>>>>>> dc56865 (upload recyclerview)

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="20dp"
                            android:id="@+id/ic_mobile"
                            android:contentDescription="@string/mobile"
                            android:background="@drawable/ic_mobile"/>

                        <TextView
<<<<<<< HEAD
                            android:id="@+id/textView_show_mobile"
=======
                            android:id="@+id/phone"
>>>>>>> dc56865 (upload recyclerview)
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_alignStart="@id/ic_mobile"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="20dp"
                            android:hint="@string/loading" />
                    </RelativeLayout>
<<<<<<< HEAD
=======
                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@id/RL_mobile"
                        android:background="@android:color/darker_gray"/>
>>>>>>> dc56865 (upload recyclerview)

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerHorizontal="true"
                        android:elevation="10dp"
                        android:visibility="gone" />
                </RelativeLayout>

<<<<<<< HEAD
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:layout_marginTop="50dp"
                    android:text="@string/registered_user_since"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:hint="@string/loading"
                    android:id="@+id/textView_show_register_date"/>
=======



>>>>>>> dc56865 (upload recyclerview)

            </LinearLayout>
        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
<<<<<<< HEAD
</LinearLayout>
=======
</LinearLayout>
>>>>>>> dc56865 (upload recyclerview)
